--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -11,6 +11,7 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    text-shadow: 1px 2px 1px black;
 }
 
 .main-content {
